[package]
name = "cryptodoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["debug", "highlighter", "tokio"]}
tokio = { version = "1.32", features = ["fs"] }
rfd = "0.12"
hex = "0.4.3"
rust-crypto = "0.2.0"
rand = "0.8.5"